--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         HTML-Tested-ClassDBI
-version:      0.02
+version:      0.03
 version_from: lib/HTML/Tested/ClassDBI.pm
 installdirs:  site
 requires:
     Class::DBI:                    
-    HTML::Tested:                  
+    HTML::Tested:                  0.09
     Test::TempDatabase:            
 
 distribution_type: module
