--- a/META.yml
+++ b/META.yml
@@ -1,13 +1,13 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         HTML-Tested-ClassDBI
-version:      0.06
+version:      0.07
 version_from: lib/HTML/Tested/ClassDBI.pm
 installdirs:  site
 requires:
     Class::DBI:                    
-    HTML::Tested:                  0.09
+    HTML::Tested:                  0.20
     Test::TempDatabase:            
 
 distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
+generated_by: ExtUtils::MakeMaker version 6.30_01
