--- a/META.yml
+++ b/META.yml
@@ -1,11 +1,12 @@
 # http://module-build.sourceforge.net/META-spec.html
 #XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
 name:         HTML-Tested-ClassDBI
-version:      0.11
+version:      0.12
 version_from: lib/HTML/Tested/ClassDBI.pm
 installdirs:  site
 requires:
     Class::DBI::Pg::More:          0.02
+    File::MMagic:                  
     HTML::Tested:                  0.22
     Test::TempDatabase:            
 
