--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,17 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         HTML-Tested-ClassDBI
-version:      0.21
-version_from: lib/HTML/Tested/ClassDBI.pm
-installdirs:  site
-requires:
+--- #YAML:1.0
+name:                HTML-Tested-ClassDBI
+version:             0.22
+abstract:            Enhances HTML::Tested to work with Class::DBI classes
+license:             ~
+author:              
+    - Boris Sukholitko (boriss@gmail.com)
+generated_by:        ExtUtils::MakeMaker version 6.42
+distribution_type:   module
+requires:     
     Class::DBI::Pg::More:          0.04
     File::MMagic:                  
     HTML::Tested:                  0.41
     Test::TempDatabase:            0.13
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.30_01
+meta-spec:
+    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
+    version: 1.3
